<?xml version="1.0" encoding="utf-8"?>
<!--  LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

</LinearLayout>
-->


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
		        
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    android:orientation="vertical"
    android:gravity="center"
    
  >
  <HorizontalScrollView
	  android:layout_width="wrap_content"
	  android:layout_height="fill_parent" 
	  android:id="@+id/HorizontalScrollView"
	  android:scrollbars="none"
	>	
	<ScrollView
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	  		android:scrollbars="none"     
	>
  
   
	  	<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:gravity="center_horizontal"

			>
			
	  	  <LinearLayout
			    android:id="@+id/linearAdmobTop"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			  android:orientation="horizontal">
	  	  </LinearLayout>
	  	  
				<Button 
				    android:text="@string/kako101_1" android:id="@+id/buttonkako101_1" 
				    android:layout_width="wrap_content" android:layout_height="wrap_content" 
				    android:onClick="onClickKako101_1"></Button>
				
				<Button 
				    android:text="@string/kako101_2" android:id="@+id/buttonkako101_2" 
				    android:layout_width="wrap_content" android:layout_height="wrap_content" 
				    android:onClick="onClickKako101_2"></Button>
				
				<Button 
				    android:text="@string/kako100_1" android:id="@+id/buttonkako100_1" 
				    android:layout_width="wrap_content" android:layout_height="wrap_content" 
				    android:onClick="onClickKako100_1"></Button>
				
				<Button 
				    android:text="@string/kako100_2" android:id="@+id/buttonkako100_2" 
				    android:layout_width="wrap_content" android:layout_height="wrap_content" 
				    android:onClick="onClickKako100_2"></Button>
				
				<Button 
				    android:text="@string/kako99_1" android:id="@+id/buttonkako99_1" 
				    android:layout_width="wrap_content" android:layout_height="wrap_content" 
				    android:onClick="onClickKako99_1"></Button>
				
				
				<LinearLayout
			    android:id="@+id/linearAdmobBottm"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
					android:orientation="horizontal">
	  	  </LinearLayout>
				
				
				
		</LinearLayout>
	</ScrollView>
	
</HorizontalScrollView>

</LinearLayout>
