<?xml version="1.0" encoding="utf-8"?>



  

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:gravity="center_horizontal"

    >

    
   
    
  <HorizontalScrollView
		 android:layout_width="wrap_content"
		 android:layout_height="wrap_content" 
		 android:id="@+id/HorizontalScrollView"
		 android:layout_gravity="center_horizontal"
		 android:gravity="center_horizontal"
 
	>
	<TableLayout
   	android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
		android:gravity="center_horizontal"
       >	
	<ScrollView
	    android:id="@+id/ScrollView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
	  	android:layout_gravity="center_horizontal"
		 	android:gravity="center_horizontal"	     
	>
	
	    <TableLayout
	        android:id="@+id/TableLayout" 
	        android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_gravity="center_horizontal"
		 			android:gravity="center_horizontal"
    	>
    	
	        <LinearLayout
				    android:id="@+id/linearAdmobTop"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				android:orientation="horizontal">
		  	  </LinearLayout>
				  <TextView android:gravity="center_horizontal"  
						    android:textColor="@color/black"
			    		  android:id="@+id/textTitle" 
			    		  android:layout_width="fill_parent" 
			    		  android:layout_height="wrap_content">
						    
						</TextView>
		  
						
						
						<TextView android:gravity="left|top"  
						    android:textColor="@color/black"
			    		  android:id="@+id/textBigQuestion" 
			    		  android:layout_width="wrap_content" 
			    		  android:layout_height="wrap_content">
						</TextView>
						<TextView android:gravity="left|top"  
						    android:textColor="@color/black"
			    		  android:id="@+id/textQuestion" 
			    		  android:layout_height="wrap_content"
			    		  android:scrollHorizontally="false"
			    		  
			    		  >
						</TextView>
					 
						<LinearLayout
						android:id="@+id/linearImageView"    
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:gravity="center"
				    android:background="@color/black"
				    
						>
							<ImageView
						    android:id="@+id/imageView1"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
							/>		
						</LinearLayout>
						
						<TextView  
							  android:id="@+id/textSpace"
						>
						</TextView>
						
				<LinearLayout
					android:id="@+id/linearSelectOutLine"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:background="@color/yellow"
				    android:padding="5dp"
						>
							 <LinearLayout
						    android:layout_width="fill_parent"
						    android:layout_height="wrap_content"
						    android:orientation="vertical"
						    android:background="#000000"
							 >
							 
								<ImageView
							  	android:id="@+id/line0"
							    android:src="@android:drawable/divider_horizontal_dark"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:scaleType="fitXY"
							  />
								<CheckBox 
								    android:layout_width="fill_parent" 
								    android:layout_height="wrap_content" android:id="@+id/check1"
									android:background="@color/ltgray"
								    >
								</CheckBox>
								
								<ImageView
							  	android:id="@+id/line1"
							    android:src="@android:drawable/divider_horizontal_dark"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:scaleType="fitXY"
							  />
								
								
								<CheckBox android:layout_width="fill_parent" 
								    android:layout_height="wrap_content" android:id="@+id/check2"
									android:background="@color/ltgray"
									>
								</CheckBox>
								
								<ImageView
							  	android:id="@+id/line2"
							    android:src="@android:drawable/divider_horizontal_dark"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:scaleType="fitXY"
							  />
								
								<CheckBox android:layout_width="fill_parent" 
								    android:layout_height="wrap_content" android:id="@+id/check3"
									android:background="@color/ltgray">
								</CheckBox>
								
								<ImageView
							  	android:id="@+id/line3"
							    android:src="@android:drawable/divider_horizontal_dark"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:scaleType="fitXY"
							  />
								<CheckBox android:layout_width="fill_parent" 
								    android:layout_height="wrap_content" android:id="@+id/check4"
									android:background="@color/ltgray">
								</CheckBox>
								<ImageView
							  	android:id="@+id/line4"
							    android:src="@android:drawable/divider_horizontal_dark"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:scaleType="fitXY"
							  />
								<CheckBox android:layout_width="fill_parent" 
								    android:layout_height="wrap_content" android:id="@+id/check5"
									android:background="@color/ltgray">
								</CheckBox>
								
								<ImageView
							  	android:id="@+id/line5"
							    android:src="@android:drawable/divider_horizontal_dark"
							    android:layout_width="fill_parent"
							    android:layout_height="wrap_content"
							    android:scaleType="fitXY"
							  />
								
								<TextView android:gravity="center_horizontal"  
								    android:textColor="@color/black"
					    		  android:id="@+id/textAnsMsg" 
					    		  android:layout_width="fill_parent"
					    		  android:layout_height="wrap_content"
									android:background="@color/ltgray"
									>
								</TextView>		
								
								</LinearLayout>
					  </LinearLayout>
					  
					  
						<LinearLayout
					    android:id="@+id/linearButtonOutline"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:orientation="horizontal"
				    >
								
							<Button 
								    android:text="@string/kaitou" android:id="@+id/buttonKaitou" 
								    android:layout_width="wrap_content" android:layout_height="wrap_content" 
								    android:onClick="onClickKaitou"
								    android:layout_weight="3">
								    
							</Button>
							
							<Button 
						    android:text="@string/next_question" android:id="@+id/buttonNextQuestion" 
						    android:layout_width="wrap_content" android:layout_height="wrap_content" 
						    android:onClick="onClickNextQuestion"
						    android:layout_weight="1"
						    >
						    
							</Button>
							
							
						</LinearLayout>
						<LinearLayout
					    android:id="@+id/linearAdmobBottm"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
							android:orientation="horizontal">
			  	  </LinearLayout>
						<LinearLayout
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
						>
							
							
							<EditText
						    android:id="@+id/eTextQuestionNum"  
						    android:inputType="number"  
						    android:layout_width= "wrap_content"
						    android:layout_height="wrap_content"
						    android:hint="@string/question_num"
						    android:layout_weight="1"
						  >
							 </EditText>
							  
						  <Button 
						    android:text="@string/move" android:id="@+id/buttonMove" 
						    android:layout_width="wrap_content" android:layout_height="wrap_content" 
						    android:onClick="onClickNextQuestion"
						    android:layout_weight="2"
						    >
						    
							</Button>
							<Button 
						    android:text="@string/befor_question" android:id="@+id/buttonBeforQuestion" 
						    android:layout_width="wrap_content" android:layout_height="wrap_content" 
						    android:onClick="onClickBeforQuestion"
						    android:layout_weight="2">
						    
							</Button>
						</LinearLayout>
						<LinearLayout
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:orientation="horizontal"
							>
									
							<Button 
							    android:text="@string/return_meun" android:id="@+id/buttonReturnMeun" 
							    android:layout_width="wrap_content" android:layout_height="wrap_content" 
							    android:onClick="onClickReturnMeun"
							    android:layout_weight="1">
							    
							</Button>
							<Button 
								    android:text="@string/end" android:id="@+id/buttonEnd" 
								    android:layout_width="wrap_content" android:layout_height="wrap_content" 
								    android:onClick="onClickEnd" 
								    android:layout_weight="1">
								    
							</Button>	
													
						</LinearLayout>
						
						
						<TableLayout
						  android:id="@+id/tableKekkaStr"
						  android:layout_width="fill_parent"
					  	android:layout_height="wrap_content"
					    android:orientation="horizontal"
					    android:layout_gravity="center_horizontal"
				    
						>
							<TextView android:layout_gravity="center_horizontal"
							    android:gravity="center_horizontal"  
							    android:textColor="@color/black"
				    		  android:id="@+id/textSeikaiRitu" 
				    		  android:layout_width="fill_parent" 
				    		  android:layout_height="wrap_content"
				    		  android:visibility="gone">
							</TextView>
							<TextView android:layout_gravity="center_horizontal"
							    android:gravity="center_horizontal"
							    android:textColor="@color/black"
				    		  android:id="@+id/textKeikaJikan" 
				    		  android:layout_width="fill_parent" 
				    		  android:layout_height="wrap_content"
				    		  android:visibility="gone">
							</TextView>
						</TableLayout>
				    <TableLayout
					    android:id="@+id/tableKekkaHyou" 
		    		  android:layout_height="wrap_content"
						>  
				  	</TableLayout>
				  	
					  <LinearLayout
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
						>
						  <Button 
						    android:text="@string/big" 
						    android:id="@+id/buttonTextSizeBig" 
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:onClick="onClickTSizeCgangeBig"
						    android:layout_weight="1"
						    >
							</Button>
						  <Button 
						    android:text="@string/midole" 
						    android:id="@+id/buttonTextSizeMidol" 
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:onClick="onClickTSizeCgangeMidol"
						    android:layout_weight="1"
						    >
						    
							</Button>
						  <Button 
						    android:text="@string/mini" 
						    android:id="@+id/buttonTextSizeMini" 
						    android:layout_width="wrap_content" 
						    android:layout_height="wrap_content" 
						    android:onClick="onClickTSizeCgangeMini"
						    android:layout_weight="1"
						    >
							</Button>
						</LinearLayout>
						<TextView 
					      android:gravity="right"
						    android:textColor="@color/black"
			    		  android:id="@+id/textAns" 
			    		  android:layout_width="fill_parent" 
			    		  android:layout_height="wrap_content">
						</TextView>
						
					  
					  
					  
						<TextView 
						    android:layout_width="fill_parent" 
			    		  android:layout_height="wrap_content"
			    		  android:text="@string/space">
						</TextView>
						
						
						
						
				</TableLayout>    
		 </ScrollView>	
	</TableLayout>	
</HorizontalScrollView>
</TableLayout>